<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <!-- Layout for individual coin row in WalletActivity -->

    <TextView
        android:id = "@+id/txtCoinSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_weight="2"/>
    
    <CheckBox
        android:id="@+id/coinCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="false"
        android:clickable="false"
        android:focusable="false"
        android:layout_weight="1"/>

</LinearLayout>