<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <!-- Layout for displaying exchange rates in WalletActivity -->

    <TextView
        android:id="@+id/penyRateInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="6dp"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/dolrRateInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="6dp"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/quidRateInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="6dp"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/shilRateInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="6dp"
        android:textColor="@color/black"
        android:textSize="16sp"/>

</LinearLayout>